--- a/package.json
+++ b/package.json
@@ -19,13 +19,20 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@stripe/react-stripe-js": "^5.0.0",
     "@stripe/stripe-js": "^8.0.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.12",
     "@tailwindplus/elements": "^1.0.13",
+    "@tiptap/extension-image": "^3.8.0",
+    "@tiptap/extension-link": "^3.8.0",
+    "@tiptap/extension-text-align": "^3.8.0",
+    "@tiptap/extension-underline": "^3.8.0",
+    "@tiptap/react": "^3.8.0",
+    "@tiptap/starter-kit": "^3.8.0",
     "@types/bcrypt": "^6.0.0",
     "@types/canvas-confetti": "^1.9.0",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
-    "astro": "^5.14.1",
+    "astro": "^5.15.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "canvas-confetti": "^1.9.3",
