feat: Mejoras en categorías de filtros - Listas dinámicas y búsqueda automática de variantes Bind
- Agregado componente DynamicListInput para características, beneficios y eficiencias
- Implementada versión en inglés para eficiencia (efficiency_en)
- Agregada columna efficiency_en a la base de datos
- Mejorado sistema de variantes con búsqueda automática en API Bind
- Campos de variantes ahora en columnas: Código Bind, Medida Nominal, Medida Real, Precio
- Búsqueda automática al ingresar código Bind con habilitación automática de campos
- Endpoint API para búsqueda de productos Bind por código
- Mejoras en manejo de imágenes de categorías

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "db:create-discount-codes": "node scripts/create-discount-codes.js"
+    "db:create-discount-codes": "node scripts/create-discount-codes.js",
+    "db:create-filter-categories": "node scripts/create-filter-categories.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.6",
