--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "astro preview",
     "astro": "astro",
     "db:create-discount-codes": "node scripts/create-discount-codes.js",
-    "db:create-filter-categories": "node scripts/create-filter-categories.js"
+    "db:create-filter-categories": "node scripts/create-filter-categories.js",
+    "db:verify-consistency": "node scripts/verify-database-consistency.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.6",
