Add: Preparación para deployment en Hostinger
- Agregar server.js para iniciar servidor Node.js
- Agregar .htaccess con configuración Apache optimizada
- Agregar .env.production.example con template de variables
- Agregar script 'start' en package.json
- Agregar guía rápida de deployment en docs/deployment/DEPLOY_HOSTINGER_GUIA_RAPIDA.md
- Incluir instrucciones para deployment vía Git, SSH y FTP

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "astro": "astro",
     "db:create-discount-codes": "node scripts/create-discount-codes.js",
     "db:create-filter-categories": "node scripts/create-filter-categories.js",
-    "db:verify-consistency": "node scripts/verify-database-consistency.js"
+    "db:verify-consistency": "node scripts/verify-database-consistency.js",
+    "start": "node server.js"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.6",
