--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@astrojs/mdx": "^4.3.6",
     "@astrojs/node": "^9.4.4",
     "@astrojs/react": "^4.4.0",
+    "@astrojs/vercel": "^9.0.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
