--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.2",
+    "express": "^5.2.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.544.0",
     "mysql2": "^3.15.0",
