feat: integrar Resend para envío real de emails
- Instalar paquete resend
- Actualizar función sendEmail para usar Resend API
- Agregar variables de entorno RESEND_API_KEY, RESEND_FROM_EMAIL, RESEND_FROM_NAME
- Lazy initialization de Resend para mejor rendimiento
- Manejo de errores mejorado
- Crear documentación de configuración de Resend
- Actualizar env.example con variables de Resend

--- a/env.example
+++ b/env.example
@@ -30,3 +30,8 @@ PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_test_...
 CLOUDINARY_CLOUD_NAME=tu_cloud_name
 CLOUDINARY_API_KEY=tu_api_key
 CLOUDINARY_API_SECRET=tu_api_secret
+
+# Configuración de Resend (Email)
+RESEND_API_KEY=re_...
+RESEND_FROM_EMAIL=noreply@tu-dominio.com
+RESEND_FROM_NAME=StarFilters
