--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mysql2": "^3.15.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "resend": "^6.6.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
