--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
     "resend": "^6.6.0",
     "stripe": "^19.1.0",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.12"
+    "tailwindcss": "^4.1.12",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
