Corregir ocurrencias restantes de 'StarFilters' por 'Star Filters'

--- a/env.example
+++ b/env.example
@@ -34,4 +34,4 @@ CLOUDINARY_API_SECRET=tu_api_secret
 # Configuración de Resend (Email)
 RESEND_API_KEY=re_...
 RESEND_FROM_EMAIL=noreply@tu-dominio.com
-RESEND_FROM_NAME=StarFilters
+RESEND_FROM_NAME=Star Filters
