Actualizar dominio a https://starfilters.mx en templates de correo y documentación

--- a/.env.production.example
+++ b/.env.production.example
@@ -40,4 +40,5 @@ FROM_EMAIL=noreply@tudominio.com
 
 # Aplicación
 # ⚠️ Reemplaza con tu dominio real
-PUBLIC_SITE_URL=https://tudominio.com
+PUBLIC_SITE_URL=https://starfilters.mx
+SITE_URL=https://starfilters.mx
