--- a/env.example
+++ b/env.example
@@ -8,7 +8,7 @@ DB_USER=tu_usuario_de_base_de_datos
 DB_PASSWORD=tu_contraseña_de_base_de_datos
 
 # Configuración del sitio
-SITE_URL=https://tu-dominio.com
+SITE_URL=https://starfilters.mx
 ADMIN_EMAIL=admin@tu-dominio.com
 
 # Configuración de autenticación
